[gd_scene load_steps=16 format=3 uid="uid://b0uk2e5a5pm52"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_3g4p1"]
[ext_resource type="Script" uid="uid://dwlh5r275f6ik" path="res://addons/CustomControls/Dialogs/CommandEvents/change_actor_class_dialog.gd" id="2_bkgk6"]
[ext_resource type="PackedScene" uid="uid://bealtmarqhbfs" path="res://addons/CustomControls/custom_option_button.tscn" id="3_jdtup"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="5_n33q2"]
[ext_resource type="Texture2D" uid="uid://bkfn4ru5noaaa" path="res://addons/CustomControls/Images/button1_background_disabled.png" id="6_l3iih"]
[ext_resource type="Texture2D" uid="uid://dqnnp323vr1vo" path="res://addons/CustomControls/Images/button1_background_hover.png" id="7_05ojg"]
[ext_resource type="Texture2D" uid="uid://beg6i1p118qd" path="res://addons/CustomControls/Images/button1_background_selected.png" id="8_iis7r"]
[ext_resource type="Texture2D" uid="uid://xl88b63otgpi" path="res://addons/CustomControls/Images/button1_background.png" id="9_i36gw"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_erns2"]

[sub_resource type="Gradient" id="Gradient_1r81o"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2105m"]
gradient = SubResource("Gradient_1r81o")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nv5ev"]
texture = ExtResource("6_l3iih")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cr2q0"]
texture = ExtResource("7_05ojg")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3ldxg"]
texture = ExtResource("8_iis7r")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jfd0k"]
texture = ExtResource("9_i36gw")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="ChangeActorClassDialog" type="Window"]
title = "Change Actor Class"
position = Vector2i(0, 36)
size = Vector2i(448, 234)
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_3g4p1")
script = ExtResource("2_bkgk6")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_erns2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_2105m")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Actor:"

[node name="ActorOptions" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_jdtup")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "[title]Actor[/title]
Character whose class will be changed."
text_overrun_behavior = 3
selected = 0
fit_to_longest_item = false
item_count = 5
popup/item_0/text = "1: Aiden"
popup/item_0/id = 0
popup/item_1/text = "2: Elara"
popup/item_1/id = 1
popup/item_2/text = "3: Thorne"
popup/item_2/id = 2
popup/item_3/text = "4: Lyra"
popup/item_3/id = 3
popup/item_4/text = "5: Gideon"
popup/item_4/id = 4

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Class:"

[node name="ClassOptions" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_jdtup")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "[title]Class[/title]
Class to which the selected character will change"
text_overrun_behavior = 3
selected = 0
fit_to_longest_item = false
item_count = 5
popup/item_0/text = "1: Warrior"
popup/item_0/id = 0
popup/item_1/text = "2: Mage"
popup/item_1/id = 1
popup/item_2/text = "3: Thief"
popup/item_2/id = 2
popup/item_3/text = "4: Archer"
popup/item_3/id = 3
popup/item_4/text = "5: Cleric"
popup/item_4/id = 4

[node name="KeepLevel" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "[title]Keep Level[/title]
This option makes the character keep their current level
when changing class (if this level is higher than the
maximum level of the class, the level will become that
maximum level).

Disabling this option will reset the character's level to 1."
text = "Keep Current Level"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_n33q2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
theme_override_styles/disabled = SubResource("StyleBoxTexture_nv5ev")
theme_override_styles/hover = SubResource("StyleBoxTexture_cr2q0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3ldxg")
theme_override_styles/normal = SubResource("StyleBoxTexture_jfd0k")
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_n33q2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
theme_override_styles/disabled = SubResource("StyleBoxTexture_nv5ev")
theme_override_styles/hover = SubResource("StyleBoxTexture_cr2q0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3ldxg")
theme_override_styles/normal = SubResource("StyleBoxTexture_jfd0k")
text = "CANCEL"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/ClassOptions" to="." method="_on_actor_options_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
